tests/negative/typechecker_bad20.sp
main: Int () {
  num: Int = 5;
  !"STRING";
  
  return 0;
}